--- a/less/main.css
+++ b/less/main.css
@@ -2,6 +2,61 @@ body {
   /*font-family: 'Noto Sans', sans-serif;*/
   margin: 0;
 }
+body a.button {
+  display: inline-block;
+  background: none;
+  border: 1px solid;
+  border-radius: 25px;
+  padding: 7px 16px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.2;
+  text-decoration: none;
+  transition: all 0.2s ease;
+}
+body a.button:hover {
+  background-color: rgba(169, 169, 169, 0.212);
+}
+body .wraper-item {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 32px;
+}
+body .wraper-item .item-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+body .wraper-item .item-img img {
+  max-width: 100%;
+  height: auto;
+}
+body .wraper-item .item-text {
+  padding: 32px 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+body .wraper-item .item-text .text-wraper {
+  text-align: center;
+  max-width: 83%;
+}
+body .wraper-item .item-text .text-wraper h2 {
+  font-size: 50px;
+  margin: 0;
+  margin-bottom: 24px;
+}
+body .wraper-item .item-text .text-wraper h2 span {
+  font-weight: bold;
+}
+body .wraper-item .item-text .text-wraper .text {
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 32px;
+}
 body .header {
   width: 100%;
 }
@@ -38,8 +93,6 @@ body .header .header-wraper .header-menu .menu-nav {
   flex-shrink: 0;
 }
 body .header .header-wraper .header-menu .menu-nav ul {
-  /*display: flex;
-              flex-direction: row;*/
   list-style-type: none;
   font-weight: 700;
   font-size: 14px;
@@ -72,26 +125,15 @@ body .header .header-wraper .header-menu .menu-entrance .entrance-in_now {
   order: 1;
   font-weight: 600;
 }
-body .header .header-wraper .header-menu .menu-entrance .entrance-in_now a {
-  border: 1px solid;
-  border-radius: 20px;
-  padding: 7px 16px;
-  transition: all 0.2s ease;
-  margin: 0;
-}
 body .header .header-wraper .header-menu .menu-entrance .entrance-in_now .in-button {
   margin-right: 16px;
-}
-body .header .header-wraper .header-menu .menu-entrance .entrance-in_now .in-button:hover {
-  background-color: rgba(169, 169, 169, 0.212);
 }
 body .header .header-wraper .header-menu .menu-entrance .entrance-in_now .now-button {
   color: white;
   background-color: black;
-  border: none;
 }
 body .header .header-wraper .header-menu .menu-entrance .entrance-in_now .now-button:hover {
-  opacity: 0.7;
+  opacity: 0.8;
 }
 body .header .header-wraper .header-menu .menu-entrance a.findStore {
   min-width: 32px;
@@ -101,7 +143,7 @@ body .header .header-wraper .header-menu .menu-entrance a.findStore {
 }
 body .header .header-wraper .header-menu .menu-entrance a.findStore svg {
   padding-right: 8px;
-  width: 32px;
+  width: 24px;
   height: 32px;
   vertical-align: middle;
 }
@@ -138,217 +180,45 @@ body .wraper-title .title .title2 .title-text p {
 body .wraper-title .title .title2 .title-text p a {
   color: white;
 }
-body .wraper-item {
-  display: flex;
+body .item {
   flex-direction: row-reverse;
   background-color: #1E3932;
-  margin-bottom: 32px;
 }
-body .wraper-item .item-img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-}
-body .wraper-item .item-img img {
-  max-width: 100%;
-  height: auto;
-}
-body .wraper-item .item-text {
-  padding: 32px 24px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-}
-body .wraper-item .item-text .text-wraper {
-  text-align: center;
+body .item .item-text .text-wraper {
   color: white;
-  max-width: 83%;
 }
-body .wraper-item .item-text .text-wraper h1 {
+body .item .item-text .text-wraper h2 {
   letter-spacing: 8px;
-  font-size: 50px;
-  margin: 0;
-  margin-bottom: 24px;
 }
-body .wraper-item .item-text .text-wraper h1 span {
-  font-weight: bold;
-}
-body .wraper-item .item-text .text-wraper .text {
-  font-size: 24px;
-  text-align: center;
-  margin-bottom: 32px;
-}
-body .wraper-item .item-text .text-wraper a {
+body .item .item-text .text-wraper a.play_now {
   border: 1px solid white;
-  border-radius: 20px;
   color: white;
-  text-decoration: none;
-  padding: 7px 16px;
-  background-color: #1E3932;
-  transition: all 0.2s ease;
-  font-weight: 600;
 }
-body .wraper-item .item-text .text-wraper a:hover {
-  background-color: rgba(206, 212, 211, 0.123);
-}
-body .wraper-item2 {
-  display: flex;
-  flex-direction: row;
+body .item2 {
   background-color: #D4E9E2;
-  margin-bottom: 32px;
 }
-body .wraper-item2 .item-img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-}
-body .wraper-item2 .item-img img {
-  max-width: 100%;
-  height: auto;
-}
-body .wraper-item2 .item-text {
-  padding: 32px 24px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-}
-body .wraper-item2 .item-text .text-wraper {
-  text-align: center;
+body .item2 .item-text .text-wraper {
   color: #1E3932;
-  max-width: 83%;
 }
-body .wraper-item2 .item-text .text-wraper h1 {
+body .item2 .item-text .text-wraper h2 {
   letter-spacing: 8px;
-  font-size: 50px;
-  margin: 0;
-  margin-bottom: 24px;
 }
-body .wraper-item2 .item-text .text-wraper h1 span {
-  font-weight: bold;
-}
-body .wraper-item2 .item-text .text-wraper .text {
-  font-size: 24px;
-  text-align: center;
-  margin-bottom: 32px;
-}
-body .wraper-item2 .item-text .text-wraper a {
+body .item2 .item-text .text-wraper a.learn {
   border: 1px solid #1E3932;
-  border-radius: 20px;
   color: #1E3932;
-  text-decoration: none;
-  padding: 7px 16px;
-  background-color: #D4E9E2;
-  transition: all 0.2s ease;
-  font-weight: 600;
 }
-body .wraper-item2 .item-text .text-wraper a:hover {
-  background-color: rgba(206, 212, 211, 0.623);
-}
-body .wraper-item3 {
-  display: flex;
+body .item3 {
   flex-direction: row-reverse;
-  margin-bottom: 32px;
 }
-body .wraper-item3 .item-img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-}
-body .wraper-item3 .item-img img {
-  max-width: 100%;
-  height: auto;
-}
-body .wraper-item3 .item-text {
-  padding: 32px 24px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-}
-body .wraper-item3 .item-text .text-wraper {
-  text-align: center;
-  max-width: 83%;
-}
-body .wraper-item3 .item-text .text-wraper h1 {
+body .item4 .item-text .text-wraper h2 {
   font-size: 24px;
-  margin: 0;
-  margin-bottom: 24px;
 }
-body .wraper-item3 .item-text .text-wraper .text {
+body .item4 .item-text .text-wraper .text {
   font-size: 18px;
   line-height: 1.75;
-  text-align: center;
-  margin-bottom: 32px;
 }
-body .wraper-item3 .item-text .text-wraper a {
-  border: 1px solid;
-  border-radius: 20px;
+body .item4 .item-text .text-wraper a.give_today {
   color: black;
-  text-decoration: none;
-  padding: 7px 16px;
-  transition: all 0.2s ease;
-  font-weight: 600;
-}
-body .wraper-item3 .item-text .text-wraper a:hover {
-  background-color: rgba(206, 212, 211, 0.219);
-}
-body .wraper-item4 {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 32px;
-}
-body .wraper-item4 .item-img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-}
-body .wraper-item4 .item-img img {
-  max-width: 100%;
-  height: auto;
-}
-body .wraper-item4 .item-text {
-  padding: 32px 24px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-}
-body .wraper-item4 .item-text .text-wraper {
-  text-align: center;
-  max-width: 83%;
-}
-body .wraper-item4 .item-text .text-wraper h1 {
-  font-size: 24px;
-  margin: 0;
-  margin-bottom: 24px;
-}
-body .wraper-item4 .item-text .text-wraper .text {
-  font-size: 18px;
-  line-height: 1.75;
-  text-align: center;
-  margin-bottom: 32px;
-}
-body .wraper-item4 .item-text .text-wraper a {
-  border: 1px solid;
-  border-radius: 20px;
-  color: black;
-  text-decoration: none;
-  padding: 7px 16px;
-  transition: all 0.2s ease;
-  font-weight: 600;
-}
-body .wraper-item4 .item-text .text-wraper a:hover {
-  background-color: rgba(206, 212, 211, 0.219);
 }
 body .wraper-site {
   box-sizing: border-box;
@@ -392,20 +262,20 @@ body footer .footer-menu .menu-decstop h3 {
   margin-bottom: 24px;
   line-height: 1.411;
 }
-body footer .footer-menu .menu-decstop ul {
+body footer .footer-menu .menu-decstop .decstop-ul {
   display: inline-block;
   margin: 0;
   padding: 0;
   list-style: none;
 }
-body footer .footer-menu .menu-decstop ul a {
+body footer .footer-menu .menu-decstop .decstop-ul a {
   color: rgba(0, 0, 0, 0.56);
   text-decoration: none;
   padding: 8px 0;
   margin-bottom: 8px;
   display: block;
 }
-body footer .footer-menu .menu-decstop ul a:hover {
+body footer .footer-menu .menu-decstop .decstop-ul a:hover {
   color: black;
 }
 body footer .footer-menu .mp {
@@ -413,6 +283,55 @@ body footer .footer-menu .mp {
 }
 body footer .footer-menu .menu-hidden {
   display: none;
+}
+body footer .footer-menu .menu-hidden .between {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 0;
+  margin-bottom: 16px;
+  cursor: pointer;
+}
+body footer .footer-menu .menu-hidden .between h3 {
+  margin: 0;
+}
+body footer .footer-menu .menu-hidden .between .checke_option {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+body footer .footer-menu .menu-hidden .between .checke_option:hover {
+  background-color: rgba(169, 169, 169, 0.212);
+}
+body footer .footer-menu .menu-hidden .between .checke_option .check_input {
+  -webkit-appearance: none;
+}
+body footer .footer-menu .menu-hidden .between .checke_option .check_input:checked + .check_box {
+  transform: rotate(-180deg);
+}
+body footer .footer-menu .menu-hidden .between .check_box {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  background-image: url(../fonts/down.svg);
+  transition: 0.3s ease;
+}
+body footer .footer-menu .menu-hidden .between-content {
+  display: none;
+}
+body footer .footer-menu .menu-hidden .between-content .content ul {
+  list-style-type: none;
+  padding: 0;
+}
+body footer .footer-menu .menu-hidden .between-content .content ul li {
+  padding: 8px 0;
+  margin-bottom: 8px;
+}
+body footer .footer-menu .menu-hidden .between-content .content ul li a {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.56);
+}
+body footer .footer-menu .menu-hidden .between-last {
+  margin-bottom: 0;
 }
 body footer nav.icon {
   display: block;
