--- a/less/main.less
+++ b/less/main.less
@@ -1,10 +1,79 @@
 body {
   /*font-family: 'Noto Sans', sans-serif;*/
   margin: 0;
+  @hover-color: rgba(169, 169, 169, 0.212);
+  @item-color: #1E3932;
+  @gray-text: rgba(0, 0, 0, .56);
+
+  a.button {
+    display: inline-block;
+    background: none;
+    border: 1px solid;
+    border-radius: 25px;
+    padding: 7px 16px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.2;
+    text-decoration: none;
+    transition: all .2s ease;
+
+    &:hover {
+      background-color: @hover-color;
+    }
+  }
+
+  .wraper-item {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 32px;
+
+    .item-img {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50%;
+
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+    }
+
+    .item-text {
+      padding: 32px 24px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 50%;
+
+      .text-wraper {
+        text-align: center;
+        max-width: 83%;
+
+        h2 {
+          font-size: 50px;
+          margin: 0;
+          margin-bottom: 24px;
+
+          span {
+            font-weight: bold;
+          }
+        }
+
+        .text {
+          font-size: 24px;
+          text-align: center;
+          margin-bottom: 32px;
+        }
+      }
+    }
+  }
+
 
   .header {
     width: 100%;
-    
+
     .header-wraper {
       display: flex;
       flex-direction: row;
@@ -32,7 +101,7 @@ body {
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-        
+
         width: 100%;
         height: 100%;
 
@@ -40,37 +109,36 @@ body {
           padding: 0 24px;
           display: block;
           flex-shrink: 0;
-            ul {
-              /*display: flex;
-              flex-direction: row;*/
-              list-style-type: none;
+
+          ul {
+            list-style-type: none;
+            font-weight: 700;
+            font-size: 14px;
+            margin: 0;
+            padding: 0;
+            display: block;
+
+            .nav-2 {
+              padding-left: 24px;
+            }
+
+            .nav-3 {
+              padding-left: 24px;
+            }
+
+            a {
+              padding: 40px 0;
               font-weight: 700;
-              font-size: 14px;
-              margin: 0;
-              padding: 0;
-              display: block;
 
-              .nav-2 {
-                padding-left: 24px;
-              }
-
-              .nav-3 {
-                padding-left: 24px;
-              }
-
-              a {
-                padding: 40px 0;
-                font-weight: 700;
-
-                &:hover {
-                  color: darkgreen;
-                }
-              }
-
-              li {
-                display: inline-block;
+              &:hover {
+                color: darkgreen;
               }
             }
+
+            li {
+              display: inline-block;
+            }
+          }
         }
 
         .menu-entrance {
@@ -82,44 +150,32 @@ body {
             order: 1;
             font-weight: 600;
 
-            a {
-              border: 1px solid;
-              border-radius: 20px;
-              padding: 7px 16px;
-              transition: all .2s ease;
-              margin: 0;
-            }
-
             .in-button {
               margin-right: 16px;
-
-              &:hover {
-                background-color: rgba(169, 169, 169, 0.212);
-              }
             }
 
             .now-button {
               color: white;
               background-color: black;
-              border: none;
 
               &:hover {
-                opacity: 0.7;
+                opacity: 0.8;
               }
             }
           }
 
           a.findStore {
-           min-width: 32px;
-           min-height: 32px;
-           margin-right: 40px;
-           display: inline-block;
-           svg {
-             padding-right: 8px;
-             width: 32px;
-             height: 32px;
-             vertical-align: middle;
-           }
+            min-width: 32px;
+            min-height: 32px;
+            margin-right: 40px;
+            display: inline-block;
+
+            svg {
+              padding-right: 8px;
+              width: 24px;
+              height: 32px;
+              vertical-align: middle;
+            }
           }
         }
       }
@@ -127,7 +183,7 @@ body {
   }
 
   .wraper-title {
-    background-color: #1E3932;
+    background-color: @item-color;
     box-sizing: border-box;
     margin-bottom: 32px;
 
@@ -169,251 +225,63 @@ body {
     }
   }
 
-  .wraper-item {
-    display: flex;
+  .item {
     flex-direction: row-reverse;
-    background-color: #1E3932;
-    margin-bottom: 32px;
-
-    .item-img {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 50%;
-
-      img {
-        max-width: 100%;
-        height: auto;
-      }
-    }
+    background-color: @item-color;
 
     .item-text {
-      padding: 32px 24px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 50%;
-
       .text-wraper {
-        text-align: center;
         color: white;
-        max-width: 83%;
 
-        h1 {
+        h2 {
           letter-spacing: 8px;
-          font-size: 50px;
-          margin: 0;
-          margin-bottom: 24px;
-
-          span {
-            font-weight: bold;
-          }
         }
 
-        .text {
-          font-size: 24px;
-          text-align: center;
-          margin-bottom: 32px;
-        }
-
-        a {
+        a.play_now {
           border: 1px solid white;
-          border-radius: 20px;
           color: white;
-          text-decoration: none;
-          padding: 7px 16px;
-          background-color: #1E3932;
-          transition: all .2s ease;
-          font-weight: 600;
-
-          &:hover {
-            background-color: rgba(206, 212, 211, 0.123);
-          }
         }
       }
     }
   }
 
-  .wraper-item2 {
-    display: flex;
-    flex-direction: row;
+  .item2 {
     background-color: #D4E9E2;
-    margin-bottom: 32px;
-
-    .item-img {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 50%;
-
-      img {
-        max-width: 100%;
-        height: auto;
-      }
-    }
 
     .item-text {
-      padding: 32px 24px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 50%;
-
       .text-wraper {
-        text-align: center;
-        color: #1E3932;
-        max-width: 83%;
-
-        h1 {
+        h2 {
           letter-spacing: 8px;
-          font-size: 50px;
-          margin: 0;
-          margin-bottom: 24px;
-
-          span {
-            font-weight: bold;
-          }
         }
 
-        .text {
-          font-size: 24px;
-          text-align: center;
-          margin-bottom: 32px;
-        }
+        color: @item-color;
 
-        a {
-          border: 1px solid #1E3932;
-          border-radius: 20px;
-          color: #1E3932;
-          text-decoration: none;
-          padding: 7px 16px;
-          background-color: #D4E9E2;
-          transition: all .2s ease;
-          font-weight: 600;
-
-          &:hover {
-            background-color: rgba(206, 212, 211, 0.623);
-          }
+        a.learn {
+          border: 1px solid @item-color;
+          color: @item-color;
         }
       }
     }
   }
 
-  .wraper-item3 {
-    display: flex;
+  .item3 {
     flex-direction: row-reverse;
-    margin-bottom: 32px;
-
-    .item-img {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 50%;
-
-      img {
-        max-width: 100%;
-        height: auto;
-      }
-    }
-
-    .item-text {
-      padding: 32px 24px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 50%;
-
-      .text-wraper {
-        text-align: center;
-        max-width: 83%;
-
-        h1 {
-          font-size: 24px;
-          margin: 0;
-          margin-bottom: 24px;
-        }
-
-        .text {
-          font-size: 18px;
-          line-height: 1.75;
-          text-align: center;
-          margin-bottom: 32px;
-        }
-
-        a {
-          border: 1px solid;
-          border-radius: 20px;
-          color: black;
-          text-decoration: none;
-          padding: 7px 16px;
-          transition: all .2s ease;
-          font-weight: 600;
-
-          &:hover {
-            background-color: rgba(206, 212, 211, 0.219);
-          }
-        }
-      }
-    }
   }
 
-  .wraper-item4 {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 32px;
-
-    .item-img {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 50%;
-
-      img {
-        max-width: 100%;
-        height: auto;
-      }
-    }
-
+  .item4 {
     .item-text {
-      padding: 32px 24px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 50%;
-
       .text-wraper {
-        text-align: center;
-        max-width: 83%;
-
-        h1 {
+        h2 {
           font-size: 24px;
-          margin: 0;
-          margin-bottom: 24px;
         }
 
         .text {
           font-size: 18px;
           line-height: 1.75;
-          text-align: center;
-          margin-bottom: 32px;
         }
 
-        a {
-          border: 1px solid;
-          border-radius: 20px;
+        a.give_today {
           color: black;
-          text-decoration: none;
-          padding: 7px 16px;
-          transition: all .2s ease;
-          font-weight: 600;
-
-          &:hover {
-            background-color: rgba(206, 212, 211, 0.219);
-          }
         }
       }
     }
@@ -457,6 +325,7 @@ body {
       margin-bottom: 32px;
       padding-bottom: 32px;
       border-bottom: 2px solid rgba(128, 128, 128, 0.2);
+
       .menu-decstop {
         width: 180px;
         max-width: 180px;
@@ -464,11 +333,10 @@ body {
 
         h3 {
           margin-bottom: 24px;
-
           line-height: 1.411;
         }
 
-        ul {
+        .decstop-ul {
           display: inline-block;
           margin: 0;
           padding: 0;
@@ -480,6 +348,7 @@ body {
             padding: 8px 0;
             margin-bottom: 8px;
             display: block;
+
             &:hover {
               color: black;
             }
@@ -493,18 +362,86 @@ body {
 
       .menu-hidden {
         display: none;
+
+        .between {
+          display: flex;
+          justify-content: space-between;
+          padding: 8px 0;
+          margin-bottom: 16px;
+          cursor: pointer;
+
+          h3 {
+            margin: 0;
+          }
+
+          .checke_option {
+            width: 44px;
+            height: 44px;
+            border-radius: 50%;
+
+            &:hover {
+              background-color: @hover-color;
+            }
+
+            .check_input {
+              -webkit-appearance: none;
+
+              &:checked+.check_box {
+                transform: rotate(-180deg);
+              }
+            }
+          }
+
+          .check_box {
+            position: absolute;
+            width: 15px;
+            height: 15px;
+            background-image: url(../fonts/down.svg);
+            transition: .3s ease;
+          }
+        }
+
+        .between-content {
+          display: none;
+
+          .content {
+            ul {
+              list-style-type: none;
+              padding: 0;
+
+              li {
+                padding: 8px 0;
+                margin-bottom: 8px;
+
+                a {
+                  text-decoration: none;
+                  color: @gray-text;
+                }
+              }
+            }
+          }
+
+        }
+
+        .between-last {
+          margin-bottom: 0;
+        }
       }
     }
+
     nav.icon {
       display: block;
+
       ul.icon-svg {
         display: flex;
         margin: 0;
         margin-left: -5px;
         padding: 0;
         list-style: none;
+
         li {
           margin-right: 4px;
+
           a {
             min-width: 44px;
             min-height: 44px;
@@ -512,9 +449,11 @@ body {
             display: inline-block;
             text-align: center;
             border-radius: 50%;
+
             &:hover {
               background-color: rgba(128, 128, 128, 0.3);
             }
+
             svg {
               padding-top: 7px;
             }
@@ -522,34 +461,41 @@ body {
         }
       }
     }
+
     ul.footer-www {
       margin: 16px 0 4px;
       display: flex;
       padding: 0;
+
       li {
         display: flex;
         align-items: center;
         text-align: center;
+
         span {
           padding: 0 8px;
-          color: rgba(0,0,0,.56);
+          color: rgba(0, 0, 0, .56);
           display: inline;
         }
+
         a.a {
           padding-right: 16px;
         }
+
         a {
           padding: 0 16px;
           text-decoration: none;
           color: black;
+
           &:hover {
             text-decoration: underline black;
           }
         }
       }
     }
+
     p {
-      color: rgba(0,0,0,.56);
+      color: @gray-text;
       margin: 0;
       padding: 16px 0;
       font-size: 14px;
