--- a/less/main.less
+++ b/less/main.less
@@ -1,5 +1,4 @@
 body {
-  /*font-family: 'Noto Sans', sans-serif;*/
   margin: 0;
   @hover-color: rgba(169, 169, 169, 0.212);
   @item-color: #1E3932;
@@ -366,6 +365,7 @@ body {
         .between {
           display: flex;
           justify-content: space-between;
+          align-items: center;
           padding: 8px 0;
           margin-bottom: 16px;
           cursor: pointer;
@@ -378,6 +378,7 @@ body {
             width: 44px;
             height: 44px;
             border-radius: 50%;
+            position: relative;
 
             &:hover {
               background-color: @hover-color;
@@ -394,6 +395,8 @@ body {
 
           .check_box {
             position: absolute;
+            top: 15px;
+            left: 14px;
             width: 15px;
             height: 15px;
             background-image: url(../fonts/down.svg);
