--- a/media/media.less
+++ b/media/media.less
@@ -6,6 +6,30 @@
         height: 83px;
       }
     }
+    footer {
+      .footer-menu {
+        display: flex;
+        flex-direction: column;
+        .menu-decstop {
+          display: none;
+        }
+        .menu-hidden {
+          display: block;
+        }
+      }
+      .footer-www {
+        flex-direction: column;
+        .span {
+          margin: 10px 0;
+          a {
+            padding: 0;
+          }
+          span {
+            display: none;
+          }
+        }
+      }
+    }
   }
 }
 @media (max-width: 766px) {
@@ -35,11 +59,14 @@
     }
     .wraper-item {
       flex-direction: column;
+      align-items: center;
+      width: 100%;
       .item-img {
         width: 100%;
       }
       .item-text {
-        width: 92%;
+        width: 90%;
+        padding: 32px 16px;
         .text-wraper {
           h2 {
             letter-spacing: 5px;
@@ -55,30 +82,6 @@
         padding: 32px 24px;
         .site-text {
           max-width: 85%;
-        }
-      }
-    }
-    footer {
-      .footer-menu {
-        display: flex;
-        flex-direction: column;
-        .menu-decstop {
-          display: none;
-        }
-        .menu-hidden {
-          display: block;
-        }
-      }
-      .footer-www {
-        flex-direction: column;
-        .span {
-          margin: 10px 0;
-          a {
-            padding: 0;
-          }
-          span {
-            display: none;
-          }
         }
       }
     }
