--- a/media/media.less
+++ b/media/media.less
@@ -85,5 +85,15 @@
         }
       }
     }
+    footer {
+      padding: 24px;
+    }
+  }
+}
+@media (max-width: 480px) {
+  body {
+    footer {
+      padding: 24px 16px;
+    }
   }
 }
