--- a/media/media.less
+++ b/media/media.less
@@ -3,7 +3,17 @@
     .header {
       .header-wraper {
         padding: 0 16px;
-        height: 83px;
+        .header-menu {
+          .menu-nav {
+            ul {
+              li {
+                a {
+                  padding: 32px 0;
+                }
+              }
+            }
+          }
+        }
       }
     }
     footer {
@@ -36,8 +46,8 @@
   body{
     .header {
       .header-wraper{
-        height: 72px;
         .header-logo {
+          margin: 16px 0;
           width: 40px;
           height: 40px;
           svg {
