--- a/less/header.css
+++ b/less/header.css
@@ -1,12 +1,27 @@
+body a.button {
+  display: inline-block;
+  background: none;
+  border: 1px solid;
+  border-radius: 25px;
+  padding: 7px 16px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.2;
+  text-decoration: none;
+  transition: all 0.2s ease;
+}
+body a.button:hover {
+  background-color: rgba(169, 169, 169, 0.212);
+}
 body .header {
   width: 100%;
+  background-color: #fff;
 }
 body .header .header-wraper {
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 0 48px;
-  height: 99px;
 }
 body .header .header-wraper a {
   text-decoration: none;
@@ -26,7 +41,6 @@ body .header .header-wraper .header-menu {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 100%;
 }
 body .header .header-wraper .header-menu .menu-nav {
   padding: 0 24px;
@@ -39,17 +53,20 @@ body .header .header-wraper .header-menu .menu-nav ul {
   font-size: 14px;
   margin: 0;
   padding: 0;
-  display: block;
 }
 body .header .header-wraper .header-menu .menu-nav ul .p-left {
   padding-left: 24px;
 }
+body .header .header-wraper .header-menu .menu-nav ul .box-shadow {
+  box-shadow: inset 0 -6px #008248;
+}
 body .header .header-wraper .header-menu .menu-nav ul a {
   padding: 40px 0;
   font-weight: 700;
+  display: block;
 }
 body .header .header-wraper .header-menu .menu-nav ul a:hover {
-  color: darkgreen;
+  color: #008248;
 }
 body .header .header-wraper .header-menu .menu-nav ul li {
   display: inline-block;
