--- a/less/header.less
+++ b/less/header.less
@@ -1,14 +1,30 @@
 body {
-  
+  @hover-color: rgba(169, 169, 169, 0.212);
+  a.button {
+    display: inline-block;
+    background: none;
+    border: 1px solid;
+    border-radius: 25px;
+    padding: 7px 16px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.2;
+    text-decoration: none;
+    transition: all .2s ease;
+
+    &:hover {
+      background-color: @hover-color;
+    }
+  }
   .header {
     width: 100%;
+    background-color: #fff;
 
     .header-wraper {
       display: flex;
       flex-direction: row;
       align-items: center;
       padding: 0 48px;
-      height: 99px;
 
       a {
         text-decoration: none;
@@ -30,9 +46,7 @@ body {
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-
         width: 100%;
-        height: 100%;
 
         .menu-nav {
           padding: 0 24px;
@@ -45,18 +59,21 @@ body {
             font-size: 14px;
             margin: 0;
             padding: 0;
-            display: block;
 
             .p-left {
               padding-left: 24px;
+            }
+            .box-shadow {
+              box-shadow: inset 0 -6px #008248;
             }
 
             a {
               padding: 40px 0;
               font-weight: 700;
+              display: block;
 
               &:hover {
-                color: darkgreen;
+                color: #008248;
               }
             }
 
