--- a/media/media.css
+++ b/media/media.css
@@ -1,7 +1,9 @@
 @media (max-width: 1020px) {
   body .header .header-wraper {
     padding: 0 16px;
-    height: 83px;
+  }
+  body .header .header-wraper .header-menu .menu-nav ul li a {
+    padding: 32px 0;
   }
   body footer .footer-menu {
     display: flex;
@@ -27,10 +29,8 @@
   }
 }
 @media (max-width: 766px) {
-  body .header .header-wraper {
-    height: 72px;
-  }
   body .header .header-wraper .header-logo {
+    margin: 16px 0;
     width: 40px;
     height: 40px;
   }
