--- a/less/menu.less
+++ b/less/menu.less
@@ -17,6 +17,7 @@ body {
     padding-top: 99px;
     .wraper-subnav {
       padding: 0 48px;
+      margin: -3px;
       border: 1px solid #dbd9d7;
       position: fixed;
       width: 100%;
@@ -129,11 +130,101 @@ body {
                   font-weight: 400;
                   margin: 0;
                 }
+                a {
+                  position: absolute;
+                  width: 100%;
+                  height: 100%;
+                  left: 0;
+                  right: 0;
+                  top: 0;
+                  bottom: 0;
+                }
               }
             }
           }
         }
       }
     }
+  }
+  .footer-fixed {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    .fixed-wraper {
+      padding: 0 9% 0 400px;
+      height: 94px;
+      background-color: #2d2926;
+      color: #fff;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .wraper-choose_a_store {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: auto;
+        .choose_a_store {
+          margin: 24px 0;
+          width: auto;
+          display: flex;
+          justify-content: flex-end;
+          align-items: center;
+          a {
+            padding-bottom: 8px;
+            text-decoration: none;
+            box-shadow: inset 0 -1.5px 0 hsla(0,0%,100%,.3);
+            min-height: 24px;
+            min-width: 240px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            flex-grow: 0;
+            p {
+              font-size: 14px;
+              line-height: 1.5;
+              letter-spacing: -.01em;
+            }
+            .media1020 {
+              display: none;
+              color: hsla(0,0%,100%,.7);
+            }
+            .min1020 {
+              margin: 0;
+              span {
+                color: hsla(0,0%,100%,.7);
+                font-weight: 400;
+              }
+              strong {
+                color: #fff;
+                display: block;
+              }
+            }
+            svg {
+              width: 18px;
+              height: 18px;
+              overflow: visible;
+              margin-left: 8px;
+              fill: #fff;
+            }
+          }
+        }
+      }
+      .open-card {
+        margin-left: 24px;
+        .shop-svg {
+          background-image: url(/fonts/shop.svg);
+          width: 32px;
+          height: 32px;
+          
+        }
+      }
+    }
+  }
+  footer {
+    padding-bottom: 94px;
   }
 }
