--- a/media/media.less
+++ b/media/media.less
@@ -46,6 +46,7 @@
   body{
     .header {
       .header-wraper{
+        justify-content: space-between;
         .header-logo {
           margin: 16px 0;
           width: 40px;
@@ -57,6 +58,9 @@
         }
         .header-menu {
        display: none;
+        }
+        .head-menu_button {
+          display: block;
         }
       }
     }  
