--- a/less/header.css
+++ b/less/header.css
@@ -101,3 +101,21 @@ body .header .header-wraper .header-menu .menu-entrance a.findStore svg {
   height: 32px;
   vertical-align: middle;
 }
+body .header .header-wraper .head-menu_button {
+  display: none;
+}
+body .header .header-wraper .head-menu_button .menu-button button {
+  border: none;
+  border-radius: 50%;
+  background: none;
+  min-width: 40px;
+  min-height: 40px;
+  cursor: pointer;
+  transition: all 0.2s ease-out;
+}
+body .header .header-wraper .head-menu_button .menu-button button:hover {
+  background-color: rgba(169, 169, 169, 0.212);
+}
+body .header .header-wraper .head-menu_button .menu-button button svg {
+  fill: rgba(0, 0, 0, 0.404);
+}
