--- a/less/stories.less
+++ b/less/stories.less
@@ -1,4 +1,9 @@
 body {
+  .wraper {
+    display: flex;
+    flex-flow: column nowrap;
+    min-height: 100vh;
+    width: 100%;
   .header {
     text-align: center;
     box-shadow: 0 0.4rem 2rem rgba(0,0,0,.1);
@@ -8,15 +13,15 @@ body {
     color: #2b2b2b;
     
     .header-wraper_logo_nav {
-      //height: 90px;
+      height: 90px;
       display: flex;
       justify-content: flex-start;
       align-items: center;
       padding: 0 40px;
-      margin: 0 ;
-      //background-color: #fff;
+      margin: 0 auto;
+      background-color: #fff;
       max-width: 1440px;
-      a {
+      .logo {
         max-width: 119px;
         min-width: 108px;
         margin-right: 40px;
@@ -36,9 +41,7 @@ body {
           display: flex;
           flex-flow: row nowrap;
           max-width: 100%;
-          //overflow: visible;
           padding: 0;
-         // display: block;
           height: auto;
           width: auto;
           .navigator-menu {
@@ -51,7 +54,7 @@ body {
             li {
               display: inline-block;
               margin: 0;
-             // position: relative;
+              position: relative;
               text-align: left;
               z-index: 10;
               list-style: none;
@@ -79,14 +82,38 @@ body {
                 span {
                   width: 16px;
                   height: 16px;
+                  margin-left: 16px;
                   svg {
                     width: 16px;
                     height: 16px;
                   }
                 }
               }
+              &:hover ul {
+                display: block;
+              }
               ul {
                 display: none;
+                position: absolute;
+                width: 198px;
+                padding: 0;
+                padding-bottom: 16px;
+                box-shadow: 0 0.4rem 0.4rem rgba(0,0,0,.1);
+                background: #fff;
+                left: -22px;
+                margin: 0;
+                .submenu {
+                  padding: 0;
+                  li {
+                    margin: 0;
+                    display: block;
+                    a {
+                      padding: 16px 30px 16px 32px;
+                      height: auto;
+                      margin: 0;
+                    }
+                  }
+                }
               }
             } 
           }
@@ -150,9 +177,12 @@ body {
                 display: flex;
                 flex-flow: row nowrap;
                 width: 100%;
+                position: relative;
                 svg {
                   width: 12px;
                   height: 12px;
+                  position: absolute;
+                  top: 13px;
                 }
                 .input {
                   display: inline-block;
@@ -162,6 +192,17 @@ body {
                     padding: 12px 20px 10px;
                   }
                 }
+                button {
+                  background: #fff;
+                  border: 0;
+                  position: absolute;
+                  top: 0;
+                  right: 0;
+                  svg {
+                    width: 16px;
+                    height: 16px;
+                  }
+                }
               }
             }
           }
@@ -169,4 +210,80 @@ body {
       }
     }
   }
+  .main-content {
+    margin-top: 90px;
+    margin-bottom: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 10px;
+    background-color: #faf7f7;
+    max-width: 1440px;
+    width: 100%;
+    .content {
+      .content-posts_featured {
+        .posts-featured {
+          .article-posts_featured {
+            margin: 0 auto;
+            max-width: 1440px;
+            padding-top: 20px;
+            .posts_featured-link {
+
+            }
+            .article-images {
+              border: 2px inset transparent;
+              position: relative;
+              margin: -20px -10px 0;
+              transition: 1.5s cubic-bezier(.22,.89,.57,1);
+              &:hover {
+                transform: scale(1);
+              }
+              img {
+                object-fit: cover;
+                object-position: center;
+                height: 100%;
+                left: 0;
+                margin: 0;
+                padding: 0;
+               // position: absolute;
+                top: 0;
+                width: 100%;
+              }
+            }
+            .posts_featured-title {
+              background: transparent;
+              bottom: 0;
+              color: #fff;
+              left: 50%;
+              margin-left: 0;
+              margin-right: 0;
+              position: absolute;
+              text-shadow: 0 4px 4px rgba(0,0,0,.15);
+              transform: translateX(-50%);
+              text-align: center;
+              span {
+                display: block;
+                font-size: 16px;
+                font-weight: 600;
+                letter-spacing: 3px;
+                margin-bottom: -6px;
+                margin-top: 20px;
+                overflow: hidden;
+                text-transform: uppercase;
+                width: 100%;
+              }
+              h1 {
+                margin: 20px 0 50px;
+                font-weight: 500;
+                font-size: 47px;
+                letter-spacing: .075em;
+                line-height: 1.32;
+                text-transform: uppercase;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
 }
