--- a/media/stories-media.less
+++ b/media/stories-media.less
@@ -178,6 +178,19 @@
           }
           .content-wrap {
             .tabs-viewed {
+              .tab-control {
+                .tab-list-contain {
+                  .tab-list {
+                    font-size: 14px;
+                    letter-spacing: 1px;
+                    .tab-item {
+                      a {
+                        padding: 10px;
+                      }
+                    }
+                  }
+                }
+              }
               .tab-group {
                 .tab-content {
                   .card-grid {
@@ -269,6 +282,7 @@
             .layout-block {
               max-width: calc(100% - 20px);
               width: calc(100% - 20px);
+              padding: 10px 20px;
             }
           }
           .tabs-viewed {
