--- a/less/stories.less
+++ b/less/stories.less
@@ -15,11 +15,11 @@ body {
     width: 100%;
 
     .header {
-      text-align: center;
+      //text-align: center;
       box-shadow: 0 0.4rem 2rem rgba(0, 0, 0, .1);
       position: fixed;
-      top: 0;
-      left: 0;
+      //top: 0;
+      //left: 0;
       width: 100%;
       z-index: 100;
       color: #2b2b2b;
@@ -31,9 +31,9 @@ body {
         align-items: center;
         padding: 0 40px;
         margin: 0 auto;
-        background-color: #fff;
+        background-color: #fff;        
+        max-width: 1360px;
         width: 100%;
-        max-width: 1440px;
 
         .logo {
           max-width: 119px;
@@ -168,9 +168,9 @@ body {
               }
 
               .navigator-site {
-                width: 400px;
+                //width: 400px;
                 display: flex;
-                //justify-content: flex-end;
+                justify-content: flex-end;
                 align-items: center;
                 flex-flow: nowrap;
                 margin-left: auto;
@@ -285,7 +285,7 @@ body {
           .posts-featured {
             .article-posts_featured {
               margin: 0 auto;
-              max-width: 1440px;
+              max-width: 1420px;
               padding-top: 20px;
 
               .posts_featured-link {
@@ -732,7 +732,7 @@ body {
                   flex-flow: row nowrap;
                   justify-content: center;
                   font-size: 15px;
-                  letter-spacing: 3px;
+                  letter-spacing: 2px;
                   line-height: 1.6666;
                   list-style: none;
                   margin: 0 auto;
@@ -991,7 +991,6 @@ body {
       .site-footer-container {
         margin: 0 auto;
         padding: 0 10px;
-        width: 100%;
 
         .logo-container {
           height: 76px;
